--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile project(':expandablerecycleradapter')
+    compile project(':baymax')
     compile 'io.reactivex.rxjava2:rxjava:2.0.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -40,4 +41,5 @@ dependencies {
     compile 'com.umeng.analytics:analytics:latest.integration'
 
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
+
 }
